css des pages de restaurants + derniers réglages animations, typographie et menu

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "devDependencies": {},
   "scripts": {
-  
+  "prefix": "postcss ./public/css/main.css --use autoprefixer"
   },
   "repository": {
     "type": "git",
